src/objects/Client__c.object
<CustomObject>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NameCL__c</fullName>
        <label>NameCL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Client</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Client Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>